# robustipy

./: .gitignore  .readthedocs.yml  CITATION.CFF  CODE-OF-CONDUCT.md  GETTING_STARTED.md  INTERPRETATION_GUIDE.md  README.md  contributing.md  example_3_ukhls.ipynb  index.rst  main.py  playground.py  pyproject.toml  readme.md  readthedocs.yml  replication_example.py  requirements.txt  setup.py  sim_example_1.ipynb  sim_example_2.ipynb  sim_example_3.ipynb  statmodelsVSus.py  test.py  test_LR.py
data/: wages.dta
empirical_examples/: empirical1_erlich.ipynb  empirical1_union.ipynb  empirical2_ukhls.ipynb  empirical3_asc.ipynb  empirical4_airline.ipynb  empirical5_gino.ipynb  empirical6_orben.ipynb  empirical_type1_acemoglu.ipynb  empirical_type1_ehrlich.ipynb  empirical_type1_erlich.ipynb  empirical_type1_union.ipynb  empirical_type2_mrw.ipynb  empirical_type2_ukhls.ipynb  empirical_type3_asc.ipynb  empirical_type3_ukhls.ipynb  empirical_type4_airline.ipynb  empirical_type4_framingham.ipynb  empirical_type5_gino.ipynb  empirical_type5_orben.ipynb  example_1_union.ipynb  example_3_asc.ipynb  readme.md
simulated_examples/: plot_sim_results.ipynb  readme.md  sim1_vanilla.py  sim2_constants.py  sim2_longitudinal.py  sim3_constants.py  sim3_longitudinal.py  sim4_binary.py  sim5_multipley.py  time_profiler.py
src/docs/: conf.py  index.rst  modules.rst  readme.md  robustipy.rst
src/nrobust/: bootstrap_utils.py  figures.py  models.py  prototypes.py  replication_data_prep.py  utils.py
src/python/: analysis.py  figures.py  load_data.py  main.py  models.py  playground.py  prepare_data.py  prototypes.py  replication_data_prep.py  test.py  test_utils.py  utils.py
src/robustify/: figures.py  models.py  utils.py
src/robustipy/: __init__.py  bootstrap_utils.py  figures.py  models.py  prototypes.py  requirements.txt  try2.py  utils.py
tests/: test_figures.py  test_models.py  test_models_claire.py  test_utils.py
(+23 files in other folders)
