[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nrobust"
version = "0.0.1.dev1"
authors = [
  { name="Charles Rahal", email="charles.rahal@sociology.ox.ac.uk" },
  { name="Daniel Valdenegro", email="daniel.valdenegro@sociology.ox.ac.uk" },
]
description = "Multiversal estimation for robust inference."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/centre-for-care/nrobust"