[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robustipy"
version = "1.0b1"
authors = [
  { name="Daniel Valdenegro", email="daniel.valdenegro@demography.ox.ac.uk" },
  { name="Charles Rahal", email="charles.rahal@demography.ox.ac.uk" },
  { name="Jiani Yan", email="jiani.yan@sociology.ox.ac.uk" },
]
maintainers = [
  { name="Daniel Valdenegro", email="daniel.valdenegro@demography.ox.ac.uk" }
]
description = "Multiversal estimation for robust inference."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
        'Development Status :: 4 - Beta',
        'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
        'Topic :: Scientific/Engineering',
]
dependencies = [
    'numpy>=1.23.2',
    'pandas>=1.4.3',
    'scipy>=1.9.0',
    'statsmodels>=0.13.2',
    'joblib>=1.2.0',
    'joypy>=0.2.6',
    'linearmodels>=4.27',
    'matplotlib>=3.6.1',
    'seaborn',
    'rich',
    'scikit-learn'
]
license = {text = "GPLv3"}

[project.urls]
Homepage = "https://robustipy.github.io/"
Repository = "https://github.com/RobustiPy/robustipy"
Issues = "https://github.com/RobustiPy/robustipy/issues"